ZEsarUX 11.1 - xxxx edition. 06 June 2024


* Improvements:

Allow hotswap to Pentagon
Improve Azimuth warning on External Audio Source Window

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window

----


ZEsarUX 11.0 - David edition. 06 June 2024

This version is dedicated to my brother David. Rest in peace.

* New things added:

Added loading audio from external audio source, like a tape player. This also includes:
- External Audio Source Window: you may see the audio wave, the signal type, and an azimuth assistant which tells you when you have to use the screwdriver ;)
- Spectrum Analyzer (Audio Spectrum I mean): you may see full frequency range of the audio wave

Added ZENG Online feature, which allows you to play to any emulated game on a multiplayer way using a central server
Added ZENG support on all emulated machines
Added ZENG support on curses driver
Added save screen to .txt file
Added save screen to .stl file, useful to print on 3D Printer
Added support for ZX81 .P81 files
Added save support for ZX80 & ZX81 .Z81 snapshots
Added function to shift bits on Hex Editor
Added new compiled version: Haiku OS
Added TempleOS GUI Style
Added QNX GUI Style
Added setting to force CHR$ 128 mode on ZX81
Added search function to locate menu entries
Added .zmenu type files to generate launcher menus
Added more vintage Spectrum programs/games from me
Added Debug Sensors SPK & MIC Bit from port FEH
Added some tape copiers to Storage-> Tape menu
Added setting for fast welcome message
Added PCW Video mode 1 palette selector

* Improvements:

Allow to load Next .nex/.snx/.sna snapshots with additional files without having to copy them on the mmc file (it mounts automatically the esxdos handler)
Allow to limit max cpu turbo on Next
Allow to pause playing on AY Player
Improved Keyboard Help: now you can press keys by clicking mouse
Allow to not save configuration when exiting ZEsarUX