@@ -5,6 +5,7 @@ ZEsarUX 11.1 - xxxx edition. 06 June 2024
 
 Allow hotswap to Pentagon
 Improve Azimuth warning on External Audio Source Window
+Allow to not save snapshot when exiting ZEsarUX
 
 * Fixes:
 
